# tapas

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml  run_groundhog.py
.github/workflows/: ci.yml
attacks/: direct_linkage.py  groundhog_attack.py  set_classifiers.py
caricatures/: FH.py  JJ.md
docs/: .readthedocs.yml
docs/source/: conf.py  dataset-schema.rst  evaluation.rst  implementing-attacks.rst  index.rst  installation.rst  library-of-attacks.rst  modelling-threats.rst  quickstart.rst
examples/: attribute_inference.py  groundhog_census.py  mia_with_canary.py  multiple_attacks.py  network_attacks.py  reporting.py  reprosyn.ipynb  uncertain_box_model.py
examples/data/: 2011 Census Microdata Teaching File.json
examples/paper/: experiment_aia.py  experiment_effeps.py
privE/: run_groundhog.py
privE/attacks/: base_classes.py  closest_distance.py  direct_linkage.py  groundhog.py  groundhog_attack.py  set_classifiers.py
privE/datasets/: dataset.py
privE/generators/: generator.py
privE/tests/: test_dataset.py
privE/threat_models/: base_classes.py  mia.py
prive/: prive.py  run.py  run_groundhog.py
prive/attacks/: __init__.py  base_classes.py  closest_distance.py  direct_linkage.py  distances.py  groundhog.py  set_classifiers.py  shadow_modelling.py  synthinference.py  utils.py
prive/configs/: config.json
prive/datasets/: __init__.py  data-schema-doc.md  data-schema-doc.rst  data_description.py  dataset.py  record.py  schema.json  utils.py
prive/examples/: reprosyn.ipynb
prive/generators/: __init__.py  generator.py
prive/report/: __init__.py  attack_summary.py  report.py  utils.py
prive/tests/: README.md  test_attack_summary.py  test_attacks.py  test_dataset.py  test_generator.py  test_record.py  test_report.py  test_threat_models.py
prive/threat_models/: __init__.py  aia.py  attacker_knowledge.py  base_classes.py  mia.py
prive/utils/: constants.py  data.py  plots.py
tapas/: run.py  run_groundhog.py
tapas/attacks/: __init__.py  base_classes.py  closest_distance.py  direct_linkage.py  network.py  set_classifiers.py  synthinference.py
tapas/datasets/: __init__.py  canary.py  data_description.py  dataset.py  network_description.py  schema.json  tabular.py  tu_dataset.py
tapas/generators/: __init__.py  generator.py  (+1 more)
(+36 files in other folders)
