[tool.poetry]
name = "prive"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
matplotlib = ">=3.4.3"
palettable = "3.3.0"
seaborn = "0.11.2"
pandas = "1.4.1"
scipy = "^1.8.0"
sklearn = "^0.0"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
spyder-kernels = ">=2.1.0,<2.2.0"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
