[tool.poetry]
name = "tapas"
version = "1.0.0"
description = ""
authors = ["Florimond Houussiau <fhoussiau@turing.ac.uk>", "James Jordon", "Callum Mole <cmole@turing.ac.uk>", "Camila Rangel-Smith <crangelsmith@turing.ac.uk>", "James Geddes <jgeddes@turing.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
matplotlib = ">=3.4.3"
palettable = "^3.3.0"
seaborn = "^0.11.2"
pandas = "^1.4.1"
scipy = "^1.8.0"
sklearn = "^0.0"
numpy = "^1.22.3"
Sphinx = {version = "^4.5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
tqdm = "^4.64.0"
setuptools = "^65.5.0"
jupyterlab = "^3.5.0"
nbclient = "0.5.13"

[tool.poetry.dev-dependencies]
spyder-kernels = "^2.1.0"
pytest = "^7.1.0"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.scripts]
prive = "prive.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
